# ansible-role-tripleo-pre-deployment-validate

./: setup.cfg
defaults/: main.yml
handlers/: main.yml
tasks/: main.yml  validate-templates.yml
tests/: test.yml
vars/: main.yml
