[metadata]
name = ansible-role-tripleo-pre-deployment-validate
summary = ansible-role-tripleo-pre-deployment-validate - A ansible role for validating files proir to a tripleo overcloud deployment
description-file =
    README.md
author = RDO-CI Team
author-email = rlandy@redhat.com
home-page = https://github.com/rlandy/ansible-role-tripleo-pre-deployment-validate
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible-role-tripleo-pre-deployment-validate/defaults = ../ansible-role-tripleo-pre-deployment-validate/defaults/*
    usr/local/share/ansible-role-tripleo-pre-deployment-validate/handlers = ../ansible-role-tripleo-pre-deployment-validate/handlers/*
    usr/local/share/ansible-role-tripleo-pre-deployment-validate/meta = ../ansible-role-tripleo-pre-deployment-validate/meta/*
    usr/local/share/ansible-role-tripleo-pre-deployment-validate/tasks = ../ansible-role-tripleo-pre-deployment-validate/tasks/*
    usr/local/share/ansible-role-tripleo-pre-deployment-validate/templates = ../ansible-role-tripleo-pre-deployment-validate/templates/*
    usr/local/share/ansible-role-tripleo-pre-deployment-validate/files = ../ansible-role-tripleo-pre-deployment-validate/files/*
    usr/local/share/ansible-role-tripleo-pre-deployment-validate/tests = ../ansible-role-tripleo-pre-deployment-validate/tests/*
    usr/local/share/ansible-role-tripleo-pre-deployment-validate/vars = ../ansible-role-tripleo-pre-deployment-validate/vars/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
